--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ img:not(.logo):not(.bg-image) {
   display: inline-block;
   width: max-content;
   background: #0073bc;
+  color: #ffffff;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
-  color: #000;
   border-radius: 30px;
   transition: all 0.3s ease-in-out;
   border: 0;
@@ -225,67 +225,144 @@ header .contain .crypto svg path {
   font-size: 1.3vw;
 }
 
-.contact-form {
-  background: rgba(0, 115, 188, 0.3);
-  padding: 1rem;
-  border-radius: 30px;
+.living .list {
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
-.contact-form .form-control {
-  border-radius: 30px;
-  border: 0;
+.living .list .item {
+  width: 15.5%;
+  border-radius: 8px;
+  overflow: hidden;
+  margin-bottom: 1rem;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
 }
-.contact-form .form-control:focus {
-  outline: none;
-  box-shadow: none;
-}
-.contact-form .iti {
+.living .list .item img {
   width: 100%;
+  height: auto;
+  margin-bottom: 1rem;
+  object-fit: cover;
+  border-radius: 0;
 }
-.contact-form svg {
-  width: 30px;
-  height: 30px;
+.living .list .item .info {
+  font-size: 1vw;
+  padding: 10px;
+  text-align: center;
 }
 
-.whatsapp-fixed {
-  position: fixed;
-  bottom: 40px;
-  right: 40px;
-  width: 60px;
-  height: 60px;
-  color: #ffffff;
-  border-radius: 50px;
-  text-align: center;
-  font-size: 30px;
-  z-index: 100;
+.images-section .list {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 1.4rem;
+}
+.images-section .list img {
+  width: calc(50% - 0.7rem);
+  display: block;
+}
+
+.contact-section {
+  position: relative;
+  padding: 20px 0 50px;
+}
+.contact-section .contain {
+  max-width: 700px;
+  margin: auto;
+  position: relative;
+}
+.contact-section .contain .title {
+  font-size: 28px;
+  font-weight: bold;
+  color: #0073bc;
+}
+.contact-section .contain .info {
+  font-weight: 400;
+  font-size: 19px;
+}
+
+.contact-form .form-group .form-control {
+  background: #fff;
+  padding: 0.6rem 0.8rem;
+  height: 48px;
+  color: #0073bc;
+  font-size: 14px;
+  border-radius: 8px;
+  border: 1px solid #0073bc;
+}
+.contact-form .form-group .form-control::placeholder {
+  color: #0073bc;
+  font-size: 14px;
+}
+.contact-form .form-group .form-control:focus {
+  box-shadow: none;
+}
+.contact-form .form-group textarea.form-control {
+  height: 100%;
+}
+.contact-form .btn-send {
+  background: #0073bc;
+  box-shadow: 0 0 6px #0073bc;
+  border-radius: 9px;
+  color: #fff;
+  padding: 10px;
   border: 0;
-  background: transparent;
+  margin: auto;
+  margin-top: 20px;
 }
-.whatsapp-fixed::before {
-  position: absolute;
-  content: "";
-  z-index: -1;
-  top: 0;
-  left: 0;
-  width: 60px;
-  height: 60px;
-  background-color: #30B700;
-  border-radius: 50%;
-  opacity: 0.6;
-  animation: 2s ease-in-out infinite pulse;
-}
-.whatsapp-fixed:hover {
-  color: #ffffff;
-}
-.whatsapp-fixed:focus {
+.contact-form .btn-send:focus {
+  border: 0;
   outline: none;
+}
+.contact-form .btn-send:focus, .contact-form .btn-send:hover {
+  opacity: 0.8;
+  transition: all 0.4s ease-in-out;
+}
+
+.copy-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: #7b7b7b;
+  color: #ffffff;
+  padding: 0.6rem 0;
+  font-size: 1rem;
+}
+.copy-right p {
+  margin-bottom: 0.3rem;
+}
+.copy-right a {
+  color: #ffffff;
+  text-decoration: underline;
+  text-decoration-color: #ffffff;
+}
+
+.fixed-whatsapp-bottom {
+  position: fixed;
+  bottom: 30px;
+  right: 25px;
+  display: block;
+  z-index: 11000;
+}
+.fixed-whatsapp-bottom::before {
+  position: absolute;
+  content: " ";
+  z-index: -1;
+  top: 0%;
+  left: 0%;
+  background-color: rgba(48, 183, 0, 0.5);
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  animation-fill-mode: both;
+  -webkit-animation-fill-mode: both;
+  opacity: 0.6;
+  animation: pulse 1.5s ease-out;
+  animation-iteration-count: infinite;
 }
 
 @keyframes pulse {
-  0%, 100% {
+  0% {
     -webkit-transform: scale(1);
     opacity: 0;
   }
@@ -293,23 +370,249 @@ header .contain .crypto svg path {
     -webkit-transform: scale(1.7);
     opacity: 0.6;
   }
+  100% {
+    -webkit-transform: scale(1);
+    opacity: 0;
+  }
 }
+.fixed-modal-button {
+  position: fixed;
+  bottom: 30px;
+  right: 90px;
+  display: flex;
+  z-index: 11000;
+}
+
+.iti__country-list {
+  max-width: 400px;
+  overflow-x: hidden;
+  white-space: nowrap;
+}
+
+.contact-modal {
+  padding: 0 !important;
+}
+.contact-modal .modal-dialog {
+  position: relative;
+  max-width: 350px;
+  margin: auto;
+}
+.contact-modal .modal-dialog .modal-content {
+  background: #f6f3ef;
+  box-shadow: 0px 0px 61px rgba(0, 0, 0, 0.1607843137);
+  border: 0;
+  border-radius: 12px;
+  padding: 2rem;
+}
+.contact-modal .modal-dialog .modal-content .title {
+  font-size: 22px;
+  color: #0073bc;
+  font-weight: bold;
+}
+.contact-modal .modal-dialog .modal-content .info {
+  font-size: 19px;
+}
+.contact-modal .modal-dialog .modal-content .contact-form .form-group {
+  margin: 0.4rem 0;
+}
+.contact-modal .modal-dialog .modal-content .contact-form .form-group label {
+  display: none;
+}
+.contact-modal .modal-dialog .modal-content .contact-form .form-group .form-control {
+  font-size: 12px;
+  height: 48px;
+  border-radius: 5px;
+}
+.contact-modal .modal-dialog .modal-content .contact-form .form-group .form-control::placeholder {
+  font-size: 12px;
+  visibility: visible;
+}
+.contact-modal .modal-dialog .modal-content .contact-form .form-group .form-control:focus {
+  box-shadow: none;
+  border: 1px solid #ced4da;
+}
+.contact-modal .modal-dialog .modal-content .contact-form .form-group textarea.form-control {
+  height: 125px;
+}
+.contact-modal .modal-dialog .modal-content .contact-form .btn-send {
+  color: #fff;
+  background: #0073bc;
+  box-shadow: 0px 0px 6px #0073bc;
+  border-radius: 9px;
+  opacity: 1;
+  border: 0;
+  height: 45px;
+  margin-top: 0.4rem;
+}
+.contact-modal .modal-dialog .modal-content .contact-form .btn-send:focus {
+  outline: none;
+}
+.contact-modal .modal-dialog .modal-content .contact-form .btn-send:hover {
+  opacity: 0.7;
+  transition: all 0.4s ease-in-out;
+}
+.contact-modal .modal-dialog .modal-content .col-lg-6 {
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+
+.order-now {
+  background: #0073bc;
+  box-shadow: 0px 0px 6px #0073bc;
+  border-radius: 9px;
+  color: #fff;
+  border: 0;
+  padding: 0.4rem 3rem;
+}
+.order-now:hover {
+  outline: none;
+  opacity: 0.8;
+  transition: all 0.4s ease-in;
+}
+.order-now:focus {
+  outline: none;
+}
+
 @media (max-width: 991.98px) {
   html {
     font-size: 15px;
   }
-  header h1 {
+  .main-title {
+    border-radius: 10px;
+    font-size: 1.2rem;
+  }
+  header .contain {
+    position: absolute;
+    left: 0%;
+  }
+  header .contain h1 {
     font-size: 1.6rem;
   }
+  header .contain p {
+    font-size: 1.6rem;
+  }
+  header .contain span {
+    font-size: 1.1rem;
+  }
+  header .contain .crypto {
+    margin-top: 1rem;
+    padding: 0.5rem;
+    border-radius: 6px;
+    background: #0073bc;
+    color: #ffffff;
+    font-size: 1.2rem;
+  }
+  header .contain .crypto svg {
+    width: 150px;
+    margin-top: -2rem;
+  }
+  .payment-plan {
+    padding: 1rem 0 2rem;
+  }
+  .payment-plan .main-title {
+    max-width: 100%;
+    margin-bottom: 1rem;
+  }
   .payment-plan .list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 3vw 0;
+  }
+  .payment-plan .list .item {
+    width: 100%;
+    margin: 0.7rem 0;
+    font-size: 1rem;
+    padding: 1rem 0.5rem;
+  }
+  .payment-plan .primary-btn {
+    margin-top: 1rem;
+  }
+  .why-project .info {
+    font-size: 1rem;
+  }
+  .living .list {
     flex-wrap: wrap;
     max-width: 400px;
     margin: auto;
   }
-  .payment-plan .list .item {
-    width: 100%;
+  .living .list .item {
+    width: 48%;
     margin-bottom: 1rem;
   }
+  .living .list .item .info {
+    font-size: 1rem;
+    margin-bottom: 0;
+    padding: 0.5rem 1rem;
+  }
+  .living .list .item img {
+    margin-bottom: 0;
+  }
+  .images-section .list {
+    gap: 1rem;
+  }
+  .images-section .list img {
+    width: 100%;
+    border-radius: 10px;
+  }
+  .contact-modal .modal-dialog {
+    width: 350px;
+    max-width: calc(100% - 30px);
+  }
+  .contact-modal .modal-dialog .modal-content {
+    padding: 1rem;
+  }
+  .contact-modal .modal-dialog .modal-content .title {
+    font-size: 18px;
+  }
+  .contact-modal .modal-dialog .modal-content .info {
+    font-size: 16px;
+  }
+  .contact-section {
+    padding: 20px 0 30px;
+  }
+  .contact-section .contain .title {
+    font-size: 18px;
+  }
+  .contact-section .contain .info {
+    font-size: 16px;
+  }
+  .contact-form {
+    width: 100%;
+  }
+  .iti__country-list {
+    max-width: 300px;
+  }
+  .order-now {
+    padding: 0.4rem 1rem;
+  }
+}
+.iti {
+  direction: ltr;
+}
+
+.iti.iti--allow-dropdown {
+  width: 100%;
+}
+
+.iti--allow-dropdown input,
+.iti--allow-dropdown input[type=text],
+.iti--allow-dropdown input[type=tel],
+.iti--separate-dial-code input,
+.iti--separate-dial-code input[type=text],
+.iti--separate-dial-code input[type=tel] {
+  padding-right: 6px !important;
+  padding-left: 52px !important;
+}
+
+.iti.iti--allow-dropdown.iti--separate-dial-code {
+  width: 100%;
+}
+
+[dir=rtl] .iti--allow-dropdown .iti__flag-container,
+[dir=rtl] .iti--separate-dial-code .iti__flag-container {
+  right: auto;
+  left: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
