--- a/style.scss
+++ b/style.scss
@@ -113,6 +113,7 @@ header{
     position: relative;
     width: 100%;
     height: 100vh;
+    max-height: 800px;
     aspect-ratio: 19/6;
     .video-overlay {
         position: absolute;
@@ -125,7 +126,7 @@ header{
         z-index: 1;
     }
 
-    video {
+    img {
         position: absolute;
         top: 0;
         bottom: 0;
@@ -133,8 +134,10 @@ header{
         right: 0;
         width: 100%;
         height: 100vh;
+        max-height: 800px;
         object-fit: cover;
         z-index: 0;
+        border-radius: 0 !important;
     }
 
     .contain{
@@ -147,34 +150,50 @@ header{
         z-index: 2;
         color: $light;
         h1{
-            font-size: 2vw;
+            font-size: 2.4vw;
             font-weight: bold;
+            margin-bottom: 1vw;
         }
 
         p{
-            font-size: 3.1vw;
+            font-size: 1.8vw;
             font-weight: bold;
+            margin-bottom: 1vw;
         }
 
-        span{
-            font-size: 1.9vw;
+        ul{
+            li{
+                font-size: 1.7vw;
+                margin-bottom: 1vw;
+                svg{
+                    width: 2vw;
+                    height: auto;
+                }
+            }
         }
 
-        .crypto{
-            margin-top: 1vw;
-            padding: 1.5vw;
-            border-radius: 1vw;
-            background: $primary;
+        button{
+            padding: 0.7vw 1.7vw;
+            border-radius: 0.4vw;
+            background: #7b7b7b;
             color: $light;
             position: relative;
-            font-size: 2vw;
+            font-size: 1.2vw;
             width: max-content;
             display: flex;
             flex-direction: column;
             justify-content: center;
+            border: 0;
+            &:focus{
+                outline: none;
+            }
+        }
+
+        .crypto{
+            background: $primary;
             svg{
-                width: 16vw;
-                margin-top: -3.5vw;
+                width: 10vw;
+                margin-top: -2vw;
                 path{
                     stroke: red;
                     stroke-width: 9;
@@ -218,7 +237,7 @@ header{
             width: 30%;
             margin: 1vw 1.5%;
             display: flex;
-            font-size: 1.5vw;
+            font-size: 1.2vw;
             align-items: center;
             justify-content: center;
             text-align: center;
@@ -239,7 +258,26 @@ header{
 
 .why-project{
     .info{
-        font-size: 1.3vw;
+        font-size: 1.2vw;
+    }
+
+    .h2{
+        font-size: 1.25vw;
+        font-weight: bold;
+        text-shadow: 1px 1px 10px $primary;
+        margin-bottom: 1vw;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        svg{
+            width: 1.5vw;
+            height: 1.5vw;
+            fill: $primary;
+        }
+
+        span{
+            width: calc(100% - 1.8vw);
+        }
     }
 }
 
@@ -361,7 +399,7 @@ header{
     background: #7b7b7b;
     color: $light;
     padding: 0.6rem 0;
-    font-size: 1rem;
+    font-size: 0.9rem;
 
     p {
         margin-bottom: 0.3rem;
@@ -537,28 +575,43 @@ header{
     }
 
     header{
+        max-height: 550px;
+        img{
+            max-height: 550px;
+        }
         .contain{
             position: absolute;
             left: 0%;
             h1{
                 font-size: 1.6rem;
+                margin-bottom: 1rem;
             }
     
             p{
-                font-size: 1.6rem;
+                font-size: 1.3rem;
+                margin-bottom: 0.5rem;
             }
     
-            span{
+            ul{
+                li{
+                    font-size: 1.2rem;
+                    margin-bottom: 0.5rem;
+                    svg{
+                        width: 20px;
+                    }
+                }
+            }
+
+            button{
+                margin-top: 1rem;
+                padding: 0.5rem 1rem;
+                border-radius: 6px;
                 font-size: 1.1rem;
+                min-width: 200px;
+                align-items: center;
             }
     
             .crypto{
-                margin-top: 1rem;
-                padding: 0.5rem;
-                border-radius: 6px;
-                background: $primary;
-                color: $light;
-                font-size: 1.2rem;
                 svg{
                     width: 150px;
                     margin-top: -2rem;
@@ -595,6 +648,20 @@ header{
     .why-project{
         .info{
             font-size: 1rem;
+        }
+
+        .h2{
+            font-size: 1.1rem;
+            margin-bottom: 1rem;
+            line-height: 1.7;
+            svg{
+                width: 20px;
+                height: 20px;
+            }
+    
+            span{
+                width: calc(100% - 25px);
+            }
         }
     }
 
