--- a/style.css
+++ b/style.css
@@ -119,7 +119,23 @@ header .video-overlay {
   background: rgba(0, 0, 0, 0.6);
   z-index: 1;
 }
-header img {
+header .logo {
+  position: absolute;
+  left: 10%;
+  top: 5%;
+  z-index: 2;
+  padding: 10px 15px;
+  width: 230px;
+  height: 50px;
+  background: #ffffff;
+  border-radius: 8px;
+}
+header .logo img {
+  width: 198px;
+  height: 30px;
+  border-radius: 0 !important;
+}
+header .bg-image {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -236,11 +252,8 @@ header .contain .crypto svg path {
 .payment-plan .primary-btn {
   margin-top: 1vw;
 }
-
-.why-project .info {
-  font-size: 1.2vw;
-}
-.why-project .h2 {
+.payment-plan .h2 {
+  width: 49%;
   font-size: 1.25vw;
   font-weight: bold;
   text-shadow: 1px 1px 10px #0073bc;
@@ -248,14 +261,19 @@ header .contain .crypto svg path {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  text-align: initial;
 }
-.why-project .h2 svg {
+.payment-plan .h2 svg {
   width: 1.5vw;
   height: 1.5vw;
   fill: #0073bc;
 }
-.why-project .h2 span {
+.payment-plan .h2 span {
   width: calc(100% - 1.8vw);
+}
+
+.why-project .info {
+  font-size: 1.2vw;
 }
 
 .living .list {
@@ -506,7 +524,7 @@ header .contain .crypto svg path {
   outline: none;
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 1199.98px) {
   html {
     font-size: 15px;
   }
@@ -517,7 +535,17 @@ header .contain .crypto svg path {
   header {
     max-height: 550px;
   }
-  header img {
+  header .logo {
+    left: 50%;
+    transform: translateX(-50%);
+    width: auto;
+    height: auto;
+  }
+  header .logo img {
+    width: 152px;
+    height: 23px;
+  }
+  header .bg-image {
     max-height: 550px;
   }
   header .contain {
@@ -573,20 +601,21 @@ header .contain .crypto svg path {
   .payment-plan .primary-btn {
     margin-top: 1rem;
   }
-  .why-project .info {
-    font-size: 1rem;
-  }
-  .why-project .h2 {
+  .payment-plan .h2 {
+    width: 100%;
     font-size: 1.1rem;
     margin-bottom: 1rem;
     line-height: 1.7;
   }
-  .why-project .h2 svg {
+  .payment-plan .h2 svg {
     width: 20px;
     height: 20px;
   }
-  .why-project .h2 span {
+  .payment-plan .h2 span {
     width: calc(100% - 25px);
+  }
+  .why-project .info {
+    font-size: 1rem;
   }
   .living .list {
     flex-wrap: wrap;
