--- a/style.scss
+++ b/style.scss
@@ -126,7 +126,24 @@ header{
         z-index: 1;
     }
 
-    img {
+    .logo{
+        position: absolute;
+        left: 10%;
+        top: 5%;
+        z-index: 2;
+        padding: 10px 15px;
+        width: 230px;
+        height: 50px;
+        background: $light;
+        border-radius: 8px;
+        img{
+            width: 198px;
+            height: 30px;
+            border-radius: 0 !important;
+        }
+    }
+
+    .bg-image {
         position: absolute;
         top: 0;
         bottom: 0;
@@ -254,14 +271,9 @@ header{
     .primary-btn{
         margin-top: 1vw;
     }
-}
-
-.why-project{
-    .info{
-        font-size: 1.2vw;
-    }
 
     .h2{
+        width: 49%;
         font-size: 1.25vw;
         font-weight: bold;
         text-shadow: 1px 1px 10px $primary;
@@ -269,6 +281,7 @@ header{
         display: flex;
         align-items: center;
         justify-content: space-between;
+        text-align: initial;
         svg{
             width: 1.5vw;
             height: 1.5vw;
@@ -278,6 +291,12 @@ header{
         span{
             width: calc(100% - 1.8vw);
         }
+    }
+}
+
+.why-project{
+    .info{
+        font-size: 1.2vw;
     }
 }
 
@@ -564,7 +583,7 @@ header{
     }
 }
 
-@media (max-width:991.98px) {
+@media (max-width:1199.98px) {
     html {
         font-size: 15px;
     }
@@ -576,7 +595,17 @@ header{
 
     header{
         max-height: 550px;
-        img{
+        .logo{
+            left: 50%;
+            transform: translateX(-50%);
+            width: auto;
+            height: auto;
+            img{
+                width: 152px;
+                height: 23px;
+            }
+        }
+        .bg-image{
             max-height: 550px;
         }
         .contain{
@@ -643,14 +672,9 @@ header{
         .primary-btn{
             margin-top: 1rem;
         }
-    }
-    
-    .why-project{
-        .info{
-            font-size: 1rem;
-        }
 
         .h2{
+            width: 100%;
             font-size: 1.1rem;
             margin-bottom: 1rem;
             line-height: 1.7;
@@ -662,6 +686,12 @@ header{
             span{
                 width: calc(100% - 25px);
             }
+        }
+    }
+    
+    .why-project{
+        .info{
+            font-size: 1rem;
         }
     }
 
