--- a/style.scss
+++ b/style.scss
@@ -611,13 +611,15 @@ header{
         .contain{
             position: absolute;
             left: 0%;
+            top: 55%;
+            width: 100%;
             h1{
-                font-size: 1.6rem;
+                font-size: 1.5rem;
                 margin-bottom: 1rem;
             }
     
             p{
-                font-size: 1.3rem;
+                font-size: 1.25rem;
                 margin-bottom: 0.5rem;
             }
     
